--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>数据库建模平台</title>
+        <title>南大通用GBase8c建模平台</title>
     </head>
     <body>
         <div id="app"></div>
